--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,19 @@
 {
   "extends": "next/core-web-vitals",
   "rules": {
-    "@typescript-eslint/no-unused-vars": ["error", {
+    "@typescript-eslint/no-unused-vars": ["warn", {
       "argsIgnorePattern": "^_",
-      "varsIgnorePattern": "^_"
+      "varsIgnorePattern": "^_",
+      "destructuredArrayIgnorePattern": "^_"
     }],
-    "@typescript-eslint/no-explicit-any": "off",
-    "@next/next/no-img-element": "off"
-  }
-} 
+    "@typescript-eslint/no-explicit-any": "warn",
+    "@next/next/no-img-element": "warn",
+    "no-unused-vars": "off"
+  },
+  "ignorePatterns": [
+    "node_modules/",
+    ".next/",
+    "out/",
+    "public/"
+  ]
+}
